refactor: CourseApplicationService 임포트 정리 및 코스 중복 로그 추가